Update 'nmecb4sdg-java-quarkus' component image to: quay.io/rhtap-test-organization-jk/rhtap-qe:356dc66e65376da4bbc1f82f84ba4b574bb21cd2@sha256:f1ff8c435b3cfa0dbf3b1f1c1c95651acf8d315ce9e250e70dd6376b1bfc0952

--- a/components/nmecb4sdg-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/nmecb4sdg-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nmecb4sdg-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/rhtap-qe:356dc66e65376da4bbc1f82f84ba4b574bb21cd2@sha256:f1ff8c435b3cfa0dbf3b1f1c1c95651acf8d315ce9e250e70dd6376b1bfc0952
+          name: container-image
