--- a/components/nmecb4sdg-java-quarkus/overlays/prod/deployment-patch.yaml
+++ b/components/nmecb4sdg-java-quarkus/overlays/prod/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap-test-organization-jk/rhtap-qe:356dc66e65376da4bbc1f82f84ba4b574bb21cd2@sha256:f1ff8c435b3cfa0dbf3b1f1c1c95651acf8d315ce9e250e70dd6376b1bfc0952
         name: container-image  
